--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,6 @@
 CONDA_BUILD_SYSROOT:
   - /opt/MacOSX10.9.sdk   # [osx]
+channel_sources:
+- deepmodeling,defaults
+channel_targets:
+- deepmodeling main
