--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -5,9 +5,9 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge,defaults
+- deepmodeling,defaults
 channel_targets:
-- conda-forge main
+- deepmodeling main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
