--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,4 +4,10 @@ channel_sources:
 - deepmodeling,defaults
 channel_targets:
 - deepmodeling main
-gsl: 2.4
+gsl:
+- 2.4
+c_compiler_version:
+- 7
+cxx_compiler_version:
+- 7
+
