--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -13,7 +13,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '7'
 docker_image:
-- ghcr.io/deepmd-kit-recipes/linux-anvil-cuda:11.3
+- quay.io/condaforge/linux-anvil-ppc64le
 gsl:
 - '2.4'
 mpich:
@@ -22,11 +22,9 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 target_platform:
-- linux-64
+- linux-ppc64le
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-- - cdt_name
-  - docker_image
 zlib:
 - '1.2'
