--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -5,7 +5,7 @@ c_compiler_version:
 cdt_name:
 - cos7
 channel_sources:
-- deepmodeling,defaults
+- deepmodeling,defaults,conda-forge
 channel_targets:
 - deepmodeling main
 cxx_compiler:
