--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - llvm-openmp  # [osx]
     - make
 # xxd is provided by package vim and used during build
-    - vim  # [linux]
+    - vim  # [linux-64]
   host:
     - gsl
     - libopenblas
