--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -5,7 +5,7 @@ c_compiler_version:
 cdt_name:
 - cos7
 channel_sources:
-- deepmodeling,defaults,conda-forge
+- deepmodeling,defaults
 channel_targets:
 - deepmodeling main
 cxx_compiler:
@@ -15,7 +15,7 @@ cxx_compiler_version:
 docker_image:
 - quay.io/condaforge/linux-anvil-ppc64le
 gsl:
-- '2.7'
+- '2.4'
 mpich:
 - '3'
 pin_run_as_build:
@@ -26,5 +26,7 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+- - cdt_name
+  - docker_image
 zlib:
 - '1.2'
