--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,17 @@
 {% set name = "plumed" %}
-{% set version = "2.8.2" %}
+{% set version = "2.8.1" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://github.com/plumed/plumed2/archive/v{{ version }}.tar.gz
-  sha256: a2064bacba1dde36b05aaf351ba4b7e6d30a165b332b0a83b7a6db04b477be9f
-
+#  url: https://github.com/plumed/plumed2/archive/v{{ version }}.tar.gz
+#  sha256: 8357eca6f280125037ad4e7c427f96f2af2f60ddfedce1a2e36e1e1cc3bff32b
+  path: /your_path/softwares/plumed_dp/dp2.2.7_plm2.8.1_vcvs/plumed
+  
 build:
-  number: 0
+  number: 1
   skip: True  # [win]
   skip: True  # [not linux]
 # Most programs should link libplumedWrapper.a so that libplumedKernel.so will be loaded
@@ -31,26 +32,51 @@ requirements:
     - llvm-openmp  # [osx]
     #- xdrfile
     - zlib
-    - mpich
-  run:
-    - {{ pin_compatible('libopenblas') }}
-    - llvm-openmp  # [osx]
-    - mpich
+    - mpich 3.3.2 hc856adb_0
 
-test:
-  requires:
-    - mpich
-  commands:
-    - plumed info --root
-    - plumed info --long-version
-    - plumed-patch -h
-    - plumed config has external_blas gsl zlib
-    - $PREFIX/lib/plumed/plumed-runtime -h
-    - test -f $PREFIX/lib/libplumed$SHLIB_EXT
-    - test -f $PREFIX/lib/libplumedWrapper.a
-    - test -f $PREFIX/lib/libplumedKernel$SHLIB_EXT
-    - conda inspect linkages -p $PREFIX $PKG_NAME
-    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
+outputs:
+ - name: plumed
+   requirements:
+     build:
+      - {{ compiler('c') }}
+      - {{ compiler('cxx') }}
+      - llvm-openmp  # [osx]
+      - make
+     host:
+      - gsl
+      - libopenblas
+      #- liblapack
+      - llvm-openmp  # [osx]
+      #- xdrfile
+      - zlib
+      - mpich 3.3.2 hc856adb_0
+     run:
+      - {{ compiler('c') }}
+      - {{ compiler('cxx') }}
+      - {{ pin_compatible('libopenblas') }}
+      - {{ pin_compatible('mpich') }}
+      - llvm-openmp  # [osx]
+      - gsl
+   files:
+    - bin/plumed*
+    - lib/*
+    - lib/plumed
+    - include/plumed      
+   test:
+    requires:
+      - conda-build
+      - mpich 3.3.2 hc856adb_0
+    commands:
+      - plumed info --root
+      - plumed info --long-version
+      - plumed-patch -h
+      - plumed config has external_blas gsl zlib
+      - $PREFIX/lib/plumed/plumed-runtime -h
+      - test -f $PREFIX/lib/libplumed$SHLIB_EXT
+      - test -f $PREFIX/lib/libplumedWrapper.a
+      - test -f $PREFIX/lib/libplumedKernel$SHLIB_EXT
+      - conda inspect linkages -p $PREFIX $PKG_NAME
+      - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: http://www.plumed.org/
